maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: not found: value toTheNorthWall
  	toTheNorthWall()
        ^Escaper:12: error: not enough arguments for method keepHandOnSideWall: (murGauche: Boolean)Int.
Unspecified value parameter murGauche.
      angleSom = angleSom + keepHandOnSideWall()
                                              ^Escaper:60: warning: enclosing method checkGauche has result type Unit: return value discarded
  return resultat
  ^